--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "angular-calendar": "^0.31.0",
+    "date-fns": "^2.29.3",
     "ngx-extended-pdf-viewer": "^18.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -36,5 +38,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.1.3"
+  },
+  "scarfSettings": {
+    "enabled": false
   }
 }
