--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^16.2.0",
     "angular-calendar": "^0.31.0",
     "date-fns": "^2.29.3",
+    "jwt-decode": "^3.1.2",
     "ngx-extended-pdf-viewer": "^18.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
