--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular-calendar": "^0.31.0",
     "date-fns": "^2.29.3",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "ngx-extended-pdf-viewer": "^18.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -32,6 +33,7 @@
     "@angular/cli": "~16.2.3",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/lodash": "^4.14.200",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
