--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "ngx-extended-pdf-viewer": "^18.0.1",
+    "ngx-quill": "^22.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -34,6 +35,7 @@
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/lodash": "^4.14.200",
+    "@types/quill": "1.3",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
