--- a/package.json
+++ b/package.json
@@ -10,29 +10,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.0",
-    "@angular/common": "^16.2.0",
-    "@angular/compiler": "^16.2.0",
-    "@angular/core": "^16.2.0",
-    "@angular/forms": "^16.2.0",
-    "@angular/material": "^16.2.5",
-    "@angular/platform-browser": "^16.2.0",
-    "@angular/platform-browser-dynamic": "^16.2.0",
-    "@angular/router": "^16.2.0",
+    "@angular/animations": "^17.0.8",
+    "@angular/common": "^17.0.8",
+    "@angular/compiler": "^17.0.8",
+    "@angular/core": "^17.0.8",
+    "@angular/forms": "^17.0.8",
+    "@angular/material": "^17.0.4",
+    "@angular/platform-browser": "^17.0.8",
+    "@angular/platform-browser-dynamic": "^17.0.8",
+    "@angular/router": "^17.0.8",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "angular-calendar": "^0.31.0",
+    "bootstrap": "^5.3.2",
     "date-fns": "^2.29.3",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
-    "ngx-extended-pdf-viewer": "^18.0.1",
-    "ngx-quill": "^22.0.0",
+    "ngx-extended-pdf-viewer": "^18.1.14",
+    "ngx-mat-timepicker": "^17.0.2",
+    "ngx-quill": "^24.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.3",
-    "@angular/cli": "~16.2.3",
-    "@angular/compiler-cli": "^16.2.0",
+    "@angular-devkit/build-angular": "^17.0.8",
+    "@angular/cli": "~17.0.8",
+    "@angular/compiler-cli": "^17.0.8",
     "@types/jasmine": "~4.3.0",
     "@types/lodash": "^4.14.200",
     "@types/quill": "1.3",
@@ -42,7 +45,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3"
+    "typescript": "~5.2.2"
   },
   "scarfSettings": {
     "enabled": false
